# FFmpeg

./: CMakeLists.txt  config.h.cmake.in  configure.cmake
libavdevice/: CMakeLists.txt
libavformat/: mpegts.c  mpegtsenc.c
