set(lib_name libavdevice)
set(lib_srcs
  alldevices.c
  alsa.c
  alsa_dec.c
  alsa_enc.c
  alsa.h
  android_camera.c
  avdevice.c
  avdevice.h
  avdeviceres.rc
  avfoundation.m
  bktr.c
  caca.c
  decklink_common_c.h
  decklink_common.cpp
  decklink_common.h
  decklink_dec_c.c
  decklink_dec.cpp
  decklink_dec.h
  decklink_enc_c.c
  decklink_enc.cpp
  decklink_enc.h
  dshow.c
  dshow_capture.h
  dshow_common.c
  dshow_crossbar.c
  dshow_enummediatypes.c
  dshow_enumpins.c
  dshow_filter.c
  dshow_pin.c
  fbdev_common.c
  fbdev_common.h
  fbdev_dec.c
  fbdev_enc.c
  file_open.c
  gdigrab.c
  iec61883.c
  internal.h
  jack.c
  kmsgrab.c
  lavfi.c
  libavdevice.v
  libcdio.c
  libdc1394.c
  Makefile
  openal-dec.c
  opengl_enc.c
  opengl_enc_shaders.h
  oss.c
  oss_dec.c
  oss_enc.c
  oss.h
  pulse_audio_common.c
  pulse_audio_common.h
  pulse_audio_dec.c
  pulse_audio_enc.c
  reverse.c
  sdl2.c
  sndio.c
  sndio_dec.c
  sndio_enc.c
  sndio.h
  tests
  timefilter.c
  timefilter.h
  utils.c
  v4l2.c
  v4l2-common.c
  v4l2-common.h
  v4l2enc.c
  version.h
  vfwcap.c
  xcbgrab.c
  xv.c
  )
add_library(${lib_name} STATIC ${lib_srcs})
